Justin Ta - Improved error handling and added exception tested.