@@ -1,67 +1,42 @@
 package org.example.Assignment;
 
 import org.junit.jupiter.api.Test;
+import org.mockito.Mockito;
 import static org.mockito.Mockito.*;
 import static org.junit.jupiter.api.Assertions.*;
-
-import java.util.Arrays;
 import java.util.List;
 
 public class SAP_BasedInvoiceSenderTest {
 
     @Test
-    public void testWhenLowInvoicesSent() {
-        // Mock the FilterInvoice class
+    public void testThrowExceptionWhenBadInvoice() {
+        // Create mock objects for FilterInvoice and SAP
         FilterInvoice mockFilter = mock(FilterInvoice.class);
+        SAP mockSAP = mock(SAP.class);
 
-        // Define the stubbed return value for low-value invoices
-        List<Invoice> lowValueInvoices = Arrays.asList(
-                new Invoice("Invoice1", 50),   // Value < 100
-                new Invoice("Invoice3", 80)    // Value < 100
-        );
+        // Set up the mock behavior to return a list of invoices
+        Invoice invoice1 = new Invoice("Customer A", 50);
+        Invoice invoice2 = new Invoice("Customer B", 200);
+        List<Invoice> mockInvoices = List.of(invoice1, invoice2);
 
-        // Stub the method lowValueInvoices to return low-value invoices
-        when(mockFilter.lowValueInvoices()).thenReturn(lowValueInvoices);
+        // When lowValueInvoices is called, return the mock list
+        when(mockFilter.lowValueInvoices()).thenReturn(mockInvoices);
 
-        // Mock the SAP class
-        SAP mockSap = mock(SAP.class);
+        // Simulate an exception being thrown for the first invoice
+        doThrow(new FailToSendSAPInvoiceException("Failed to send invoice")).when(mockSAP).send(invoice1);
 
-        // Create the object under test (passing the mocked filter and SAP sender)
-        SAP_BasedInvoiceSender sapBasedInvoiceSender = new SAP_BasedInvoiceSender(mockFilter, mockSap);
+        // Create the system under test
+        SAP_BasedInvoiceSender sender = new SAP_BasedInvoiceSender(mockFilter, mockSAP);
 
-        // Call the method under test
-        sapBasedInvoiceSender.sendLowValuedInvoices();
+        // Call the method to test
+        List<Invoice> failedInvoices = sender.sendLowValuedInvoices();
 
-        // Verify that the send() method was called
-        for (Invoice invoice : lowValueInvoices) {
-            verify(mockSap).send(invoice);  
-        }
-    }
+        // Verify that send was called on the mock SAP object
+        verify(mockSAP, times(1)).send(invoice1);
+        verify(mockSAP, times(1)).send(invoice2);
 
-    @Test
-    public void testWhenNoInvoices() {
-        // Mock the FilterInvoice class
-        FilterInvoice mockFilter = mock(FilterInvoice.class);
-
-        // Define the stubbed return value
-        List<Invoice> noLowValueInvoices = Arrays.asList(
-                new Invoice("Invoice1", 150),  // Value > 100
-                new Invoice("Invoice2", 120)   // Value > 100
-        );
-
-        // Stub the method lowValueInvoices
-        when(mockFilter.lowValueInvoices()).thenReturn(noLowValueInvoices);
-
-        // Mock the SAP class
-        SAP mockSap = mock(SAP.class);
-
-        // Create the object under test
-        SAP_BasedInvoiceSender sapBasedInvoiceSender = new SAP_BasedInvoiceSender(mockFilter, mockSap);
-
-        // Call the method under test
-        sapBasedInvoiceSender.sendLowValuedInvoices();
-
-        // Verify that the send() method was NOT called
-        verify(mockSap, never()).send(any(Invoice.class));
+        // Assert that the failedInvoices list contains the invoice that failed
+        assertEquals(1, failedInvoices.size());
+        assertTrue(failedInvoices.contains(invoice1));
     }
 }
